--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,488 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from seemps.analysis.operators import *\n",
+    "from seemps.state import MPS\n",
+    "\n",
+    "from tests.tools import *\n",
+    "\n",
+    "class Test_analysis_operators(TestCase):\n",
+    "    n_qubits = 6\n",
+    "    N = 2**n_qubits\n",
+    "    L = 10\n",
+    "    a = - L/2\n",
+    "    dx = L/N\n",
+    "    x = a + dx * np.arange(N)\n",
+    "    k = 2 * np.pi * np.arange(N) / L\n",
+    "    p = k - (np.arange(N) >= (N / 2)) * 2 * np.pi / dx\n",
+    "    f = random_uniform_mps(2, n_qubits)\n",
+    "\n",
+    "    def test_id_mpo(self):\n",
+    "        self.assertSimilar(self.f, id_mpo(self.n_qubits) @ self.f)\n",
+    "\n",
+    "    def test_x_mpo(self):\n",
+    "        self.assertSimilar(self.x * self.f.to_vector(), x_mpo(self.n_qubits, self.a, self.dx) @ self.f)\n",
+    "    \n",
+    "    def test_x_n_mpo(self):\n",
+    "        n = 3\n",
+    "        self.assertSimilar(self.x**n * self.f.to_vector(), (x_mpo(self.n_qubits, self.a, self.dx) ** n) @ self.f)\n",
+    "\n",
+    "    def test_p_mpo(self):\n",
+    "        self.assertSimilar(self.p * self.f.to_vector(), p_mpo(self.n_qubits, self.dx) @ self.f)\n",
+    "    \n",
+    "    def test_p_n_mpo(self):\n",
+    "        n = 3\n",
+    "        self.assertSimilar(self.p**n * self.f.to_vector(), (p_mpo(self.n_qubits, self.dx) ** n) @ self.f)\n",
+    "\n",
+    "    def test_exp_mpo(self):\n",
+    "        c = -2j\n",
+    "        self.assertSimilar(np.exp(c*self.x) * self.f.to_vector(), exponential_mpo(self.n_qubits, self.a, self.dx, c) @ self.f)\n",
+    "\n",
+    "    def test_cos_mpo(self):\n",
+    "        self.assertSimilar(np.cos(self.x) * self.f.to_vector(), cos_mpo(self.n_qubits, self.a, self.dx) @ self.f)\n",
+    "\n",
+    "    def test_sin_mpo(self):\n",
+    "        self.assertSimilar(np.sin(self.x) * self.f.to_vector(), sin_mpo(self.n_qubits, self.a, self.dx) @ self.f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_cos_mpo (__main__.Test_analysis_operators.test_cos_mpo) ... ok\n",
+      "test_exp_mpo (__main__.Test_analysis_operators.test_exp_mpo) ... ok\n",
+      "test_id_mpo (__main__.Test_analysis_operators.test_id_mpo) ... ok\n",
+      "test_p_mpo (__main__.Test_analysis_operators.test_p_mpo) ... ok\n",
+      "test_p_n_mpo (__main__.Test_analysis_operators.test_p_n_mpo) ... ok\n",
+      "test_sin_mpo (__main__.Test_analysis_operators.test_sin_mpo) ... ok\n",
+      "test_x_mpo (__main__.Test_analysis_operators.test_x_mpo) ... ok\n",
+      "test_x_n_mpo (__main__.Test_analysis_operators.test_x_n_mpo) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 8 tests in 0.043s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "suite1 = unittest.TestLoader().loadTestsFromNames(['__main__.Test_analysis_operators'])\n",
+    "unittest.TextTestRunner(verbosity=2).run(suite1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from seemps import MPO, MPOList, MPSSum, random_uniform_mps\n",
+    "from seemps.operators import MPOSum\n",
+    "from seemps.state import MPSSum\n",
+    "from seemps.state.core import DEFAULT_STRATEGY, Simplification, Strategy, NO_TRUNCATION\n",
+    "from seemps.tools import σx, σy, σz\n",
+    "from seemps.truncate import simplify\n",
+    "\n",
+    "from tests.tools import TestCase, contain_same_objects\n",
+    "\n",
+    "TEST_STRATEGY = DEFAULT_STRATEGY.replace(simplify=Simplification.VARIATIONAL)\n",
+    "\n",
+    "\n",
+    "class TestMPOSum(TestCase):\n",
+    "    def setUp(self):\n",
+    "        self.mpoA = MPO([σx.reshape(1, 2, 2, 1)] * 10, strategy=NO_TRUNCATION)\n",
+    "        self.mpoB = MPO([σz.reshape(1, 2, 2, 1)] * 10, strategy=NO_TRUNCATION)\n",
+    "        self.mpoC = MPOList([self.mpoA, self.mpoB], strategy=NO_TRUNCATION)\n",
+    "        self.mpoD = MPO([σy.reshape(1, 2, 2, 1)] * 10, strategy=NO_TRUNCATION)\n",
+    "\n",
+    "    def assertIdenticalLists(self, a: list, b: list):\n",
+    "        if not all(A is B for A, B in zip(a, b)):\n",
+    "            raise AssertionError(\"Different lists:\\na = {a}\\nb = {b}\")\n",
+    "\n",
+    "    def test_mposum_init_copies_data(self):\n",
+    "        mpos = [self.mpoA, self.mpoB]\n",
+    "        weights = [1.0, 2.0]\n",
+    "        mposum = MPOSum(mpos, weights)\n",
+    "        self.assertTrue(mposum.mpos is not mpos)\n",
+    "        self.assertTrue(mposum.weights is not weights)\n",
+    "\n",
+    "    def test_mposum_copy_is_shallow(self):\n",
+    "        A = MPOSum([self.mpoA, self.mpoB], [1.0, 2.0], Strategy())\n",
+    "        B = A.copy()\n",
+    "        self.assertTrue(A.mpos is not B.mpos)\n",
+    "        self.assertTrue(contain_same_objects(A.mpos, B.mpos))\n",
+    "        self.assertTrue(A.weights is not B.weights)\n",
+    "        self.assertTrue(contain_same_objects(A.weights, B.weights))\n",
+    "        self.assertTrue(A.strategy is B.strategy)\n",
+    "\n",
+    "    def test_mposum_simple(self):\n",
+    "        mposum = MPOSum([self.mpoA, self.mpoB])\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoA, self.mpoB, self.mpoC])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, 1.0])\n",
+    "        self.assertEqual(mposum.size, self.mpoA.size)\n",
+    "\n",
+    "    def test_mposum_arises_from_summing_mpos(self):\n",
+    "        mposum = self.mpoA + self.mpoB\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoA, self.mpoB])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, 1.0])\n",
+    "        self.assertEqual(mposum.size, self.mpoA.size)\n",
+    "\n",
+    "        mposum = self.mpoA + self.mpoC\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoA, self.mpoC])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, 1.0])\n",
+    "        self.assertEqual(mposum.size, self.mpoA.size)\n",
+    "\n",
+    "        mposum = self.mpoC + self.mpoA\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoC, self.mpoA])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, 1.0])\n",
+    "        self.assertEqual(mposum.size, self.mpoA.size)\n",
+    "\n",
+    "    def test_mposum_arises_from_subtracting_mpos(self):\n",
+    "        mposum = self.mpoA - self.mpoB\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoA, self.mpoB])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, -1.0])\n",
+    "\n",
+    "        mposum = self.mpoA - self.mpoC\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoA, self.mpoC])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, -1.0])\n",
+    "\n",
+    "        mposum = self.mpoC - self.mpoB\n",
+    "        self.assertIsInstance(mposum, MPOSum)\n",
+    "        self.assertIdenticalLists(mposum.mpos, [self.mpoC, self.mpoB])\n",
+    "        self.assertSimilar(mposum.weights, [1.0, -1.0])\n",
+    "\n",
+    "    def test_mposum_application_creates_mpssum(self):\n",
+    "        state = random_uniform_mps(2, self.mpoA.size, D=10)\n",
+    "\n",
+    "        mposum = self.mpoA + self.mpoB\n",
+    "        newstate = mposum.apply(state, strategy=NO_TRUNCATION)\n",
+    "        self.assertIsInstance(newstate, MPSSum)\n",
+    "        self.assertSimilar(\n",
+    "            (self.mpoA + self.mpoB).apply(state).to_vector(),\n",
+    "            self.mpoA.apply(state).to_vector() + self.mpoB.apply(state).to_vector(),\n",
+    "        )\n",
+    "\n",
+    "    def test_mposum_apply_can_simplify(self):\n",
+    "        state = random_uniform_mps(2, self.mpoA.size, D=10)\n",
+    "\n",
+    "        mposum = self.mpoA + self.mpoB\n",
+    "        self.assertSimilar(\n",
+    "            (self.mpoA + self.mpoB)\n",
+    "            .apply(state, strategy=TEST_STRATEGY)\n",
+    "            .to_vector(),\n",
+    "            (self.mpoA + self.mpoB).tomatrix() @ state.to_vector(),\n",
+    "        )\n",
+    "\n",
+    "    def test_mpo_set_strategy(self):\n",
+    "        new_strategy = Strategy(tolerance=1e-10)\n",
+    "        mposum = (self.mpoA + self.mpoB).set_strategy(new_strategy)\n",
+    "        self.assertTrue(new_strategy, mposum.strategy)\n",
+    "\n",
+    "    def test_mposum_application_works_on_mpssum(self):\n",
+    "        mposum = self.mpoA + self.mpoB\n",
+    "        state = random_uniform_mps(2, self.mpoA.size, D=10)\n",
+    "        combined_state = simplify(\n",
+    "            self.mpoA.apply(2 * state) + self.mpoB.apply(2 * state),\n",
+    "            strategy=DEFAULT_STRATEGY.replace(simplify=Simplification.VARIATIONAL),\n",
+    "        )\n",
+    "        self.assertSimilar(mposum.apply(state + state), combined_state)\n",
+    "        self.assertSimilar(mposum @ (state + state), combined_state)\n",
+    "\n",
+    "    def test_mposum_join_real_mpos(self):\n",
+    "        state = random_uniform_mps(2, self.mpoA.size, D=10)\n",
+    "        mposum = self.mpoA + self.mpoB\n",
+    "        newstate = mposum @ state\n",
+    "        newstate_join = mposum.join() @ state\n",
+    "        self.assertSimilar(newstate.to_vector(), newstate_join.to_vector())\n",
+    "\n",
+    "    def test_mposum_join_complex_mpos(self):\n",
+    "        state = random_uniform_mps(2, self.mpoA.size, D=10)\n",
+    "        mposum = self.mpoA + self.mpoD\n",
+    "        newstate = mposum @ state\n",
+    "        newstate_join = mposum.join() @ state\n",
+    "        self.assertSimilar(newstate.to_vector(), newstate_join.to_vector())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_mpo_set_strategy (__main__.TestMPOSum.test_mpo_set_strategy) ... ok\n",
+      "test_mposum_application_creates_mpssum (__main__.TestMPOSum.test_mposum_application_creates_mpssum) ... ok\n",
+      "test_mposum_application_works_on_mpssum (__main__.TestMPOSum.test_mposum_application_works_on_mpssum) ... ok\n",
+      "test_mposum_apply_can_simplify (__main__.TestMPOSum.test_mposum_apply_can_simplify) ... ok\n",
+      "test_mposum_arises_from_subtracting_mpos (__main__.TestMPOSum.test_mposum_arises_from_subtracting_mpos) ... ok\n",
+      "test_mposum_arises_from_summing_mpos (__main__.TestMPOSum.test_mposum_arises_from_summing_mpos) ... ok\n",
+      "test_mposum_copy_is_shallow (__main__.TestMPOSum.test_mposum_copy_is_shallow) ... ok\n",
+      "test_mposum_init_copies_data (__main__.TestMPOSum.test_mposum_init_copies_data) ... ok\n",
+      "test_mposum_join_complex_mpos (__main__.TestMPOSum.test_mposum_join_complex_mpos) ... ok\n",
+      "test_mposum_join_real_mpos (__main__.TestMPOSum.test_mposum_join_real_mpos) ... ok\n",
+      "test_mposum_simple (__main__.TestMPOSum.test_mposum_simple) ... ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 11 tests in 0.102s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "suite1 = unittest.TestLoader().loadTestsFromNames(['__main__.TestMPOSum'])\n",
+    "unittest.TextTestRunner(verbosity=2).run(suite1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from seemps import MPO, product_state\n",
+    "from seemps.analysis.evolution import *\n",
+    "from seemps.hamiltonians import HeisenbergHamiltonian\n",
+    "\n",
+    "from tests.tools import *\n",
+    "\n",
+    "\n",
+    "def callback():\n",
+    "    norms = []\n",
+    "\n",
+    "    def callback_func(state: MPS):\n",
+    "        norms.append(np.sqrt(state.norm_squared()))\n",
+    "        return None\n",
+    "\n",
+    "    return callback_func, norms\n",
+    "\n",
+    "\n",
+    "class TestEuler(TestCase):\n",
+    "    Sz = np.diag([0.5, -0.5])\n",
+    "\n",
+    "    def make_local_Sz_mpo(self, size: int) -> MPO:\n",
+    "        A = np.zeros((2, 2, 2, 2))\n",
+    "        A[0, :, :, 0] = np.eye(2)\n",
+    "        A[1, :, :, 1] = np.eye(2)\n",
+    "        A[0, :, :, 1] = self.Sz\n",
+    "        tensors = [A] * size\n",
+    "        tensors[0] = tensors[0][[0], :, :, :]\n",
+    "        tensors[-1] = tensors[-1][:, :, :, [1]]\n",
+    "        return MPO(tensors)\n",
+    "\n",
+    "    def test_euler_with_local_field(self):\n",
+    "        N = 4\n",
+    "        H = self.make_local_Sz_mpo(N)\n",
+    "        guess = product_state(np.asarray([1, 1]) / np.sqrt(2.0), N)\n",
+    "        exact = product_state([0, 1], N)\n",
+    "        result = runge_kutta_fehlberg(H, guess, maxiter=100, Δβ=0.05, tol_rk=1e-7)\n",
+    "        self.assertAlmostEqual(result.energy, H.expectation(exact))\n",
+    "        self.assertSimilar(result.state, exact, atol=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_euler_with_local_field (__main__.TestEuler.test_euler_with_local_field) ... "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1116426608678096e-19\n",
+      "-0.09991674988386244\n",
+      "-0.199335989140117\n",
+      "-0.29777006697544534\n",
+      "-0.39475063995953225\n",
+      "-0.4898373240469587\n",
+      "-0.582625223830405\n",
+      "-0.7007162386002774\n",
+      "-0.8134885171543358\n",
+      "-0.9329260617979721\n",
+      "-1.0687846860110275\n",
+      "-1.1821698639391012\n",
+      "-1.2876212569805587\n",
+      "-1.3791540836667475\n",
+      "-1.4612079112809053\n",
+      "-1.5357702055962101\n",
+      "-1.6000473714081123\n",
+      "-1.6561916470397575\n",
+      "-1.7059675386609907\n",
+      "-1.7489568330282745\n",
+      "-1.7861813850742314\n",
+      "-1.8187171844610117\n",
+      "-1.846620494799077\n",
+      "-1.87096971887005\n",
+      "-1.891527055509365\n",
+      "-1.9091894308022885\n",
+      "-1.924188693937255\n",
+      "-1.936969080646441\n",
+      "-1.9478085608904194\n",
+      "-1.9570998629197291\n",
+      "-1.9647388894109779\n",
+      "-1.9711824796942305\n",
+      "-1.9764774149569597\n",
+      "-1.9809835304594667\n",
+      "-1.9846236392937473\n",
+      "-1.98766459543858\n",
+      "-1.9901649551361393\n",
+      "-1.9922077982002495\n",
+      "-1.9938435607148408\n",
+      "-1.9952015493697828\n",
+      "-1.996271022671595\n",
+      "-1.9971107328578157\n",
+      "-1.9977876743066731\n",
+      "-1.998314682373921\n",
+      "-1.9987287876466722\n",
+      "-1.9990463089554824\n",
+      "-1.9992901181388114\n",
+      "-1.999477229575199\n",
+      "-1.9996182243029472\n",
+      "-1.9997243520109211\n",
+      "-1.9998046555287514\n",
+      "-1.9998632820569182\n",
+      "-1.9999052403471902\n",
+      "-1.9999351886373509\n",
+      "-1.9999561286621612\n",
+      "-1.9999709591248704\n",
+      "-1.9999811388609565\n",
+      "-1.9999880491892696\n",
+      "-1.9999925518866049\n",
+      "-1.9999955087167218\n",
+      "-1.9999973689895232\n",
+      "-1.99999853975026\n",
+      "-1.9999992066412375\n",
+      "-1.9999995947072837\n",
+      "-1.9999998007570017\n",
+      "-1.9999999088227056\n",
+      "-1.9999999620425768\n",
+      "-1.99999998609751\n",
+      "-1.999999995397069\n",
+      "-1.9999999987024097\n",
+      "-1.9999999997078906\n",
+      "-1.9999999999342408\n",
+      "-1.999999999988044\n",
+      "-1.9999999999978253\n",
+      "-1.9999999999996045\n",
+      "-1.9999999999999585\n",
+      "-1.9999999999999998\n",
+      "-1.9999999999999991\n",
+      "-1.9999999999999991\n",
+      "-1.9999999999999991\n",
+      "-1.9999999999999991\n",
+      "-2.000000000000001\n",
+      "-2.000000000000001\n",
+      "-2.0\n",
+      "-2.0\n",
+      "-2.000000000000001\n",
+      "-2.0\n",
+      "-2.0\n",
+      "-2.000000000000001\n",
+      "-2.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 1.718s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.9999999999999996\n",
+      "-2.0\n",
+      "-2.0\n",
+      "-2.0\n",
+      "-1.9999999999999991\n",
+      "-1.9999999999999991\n",
+      "-2.000000000000001\n",
+      "-1.9999999999999996\n",
+      "-2.0\n",
+      "-2.000000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "suite1 = unittest.TestLoader().loadTestsFromNames(['__main__.TestEuler'])\n",
+    "unittest.TextTestRunner(verbosity=2).run(suite1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_local_Sz_mpo(size: int) -> MPO:\n",
+    "        Sz = np.diag([0.5, -0.5])\n",
+    "        A = np.zeros((2, 2, 2, 2))\n",
+    "        A[0, :, :, 0] = np.eye(2)\n",
+    "        A[1, :, :, 1] = np.eye(2)\n",
+    "        A[0, :, :, 1] = Sz\n",
+    "        tensors = [A] * size\n",
+    "        tensors[0] = tensors[0][[0], :, :, :]\n",
+    "        tensors[-1] = tensors[-1][:, :, :, [1]]\n",
+    "        return MPO(tensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sol = -2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 4\n",
+    "H = make_local_Sz_mpo(N)\n",
+    "guess = product_state(np.asarray([1, 1]) / np.sqrt(2.0), N)\n",
+    "exact = product_state([0, 1], N)\n",
+    "print('sol =', H.expectation(exact))\n",
+    "result = improved_euler(H, guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
