--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -20,3 +20,18 @@
   month = apr,
   year = {2021}
 }
+
+@article{GarciaMolina2022,
+  title = {Quantum Fourier analysis for multivariate functions and applications to a class of Schr\"odinger-type partial differential equations},
+  author = {García-Molina, Paula and Rodríguez-Mediavilla, Javier and García-Ripoll, Juan José},
+  journal = {Phys. Rev. A},
+  volume = {105},
+  issue = {1},
+  pages = {012433},
+  numpages = {17},
+  year = {2022},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.105.012433},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.105.012433}
+}
