--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -11,10 +11,10 @@
   doi = {10.22331/q-2021-04-15-431},
   url = {https://doi.org/10.22331/q-2021-04-15-431},
   title = {Quantum-inspired algorithms for multivariate analysis: from interpolation to partial differential equations},
-  author = {Garc{\'{i}}a-Ripoll, Juan Jos{\'{e}}},
+  author = {García-Ripoll, Juan José},
   journal = {{Quantum}},
   issn = {2521-327X},
-  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  publisher = {{Verein zur Förderung des Open Access Publizierens in den Quantenwissenschaften}},
   volume = {5},
   pages = {431},
   month = apr,
@@ -22,7 +22,7 @@
 }
 
 @article{GarciaMolina2022,
-  title = {Quantum Fourier analysis for multivariate functions and applications to a class of Schr\"odinger-type partial differential equations},
+  title = {Quantum Fourier analysis for multivariate functions and applications to a class of Schrödinger-type partial differential equations},
   author = {García-Molina, Paula and Rodríguez-Mediavilla, Javier and García-Ripoll, Juan José},
   journal = {Phys. Rev. A},
   volume = {105},
