--- a/examples/DMRG.ipynb
+++ b/examples/DMRG.ipynb
@@ -162,7 +162,6 @@
     "from time import process_time\n",
     "\n",
     "\n",
-    "\n",
     "def experiment_00(N: int = 30, steps: int = 21):\n",
     "    \"\"\"Explore the quantum phase transition as a function of the transverse\n",
     "    magnetic field $h$. Plots the magnetizations of the ground state, computed\n",
@@ -208,7 +207,6 @@
     "    ax2.set_xlabel(r\"$h$\")\n",
     "    ax2.set_ylabel(r\"$\\langle{S_x}\\rangle$\")\n",
     "    fig.tight_layout()\n",
-    "\n",
     "\n",
     "\n",
     "experiment_00(N=15)"
@@ -288,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
