Fix typo in tutorial

--- a/examples/Interpolation.ipynb
+++ b/examples/Interpolation.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to interpolate this function to a grid with $m=n+1$ points, i.e., we double the number of points of the grid. We need to define the new space on which the function is represented, as well as the function for its benchmark."
+    "We are going to interpolate this function to a grid with $m=n+1$ qubits, i.e., we double the number of points of the grid. We need to define the new space on which the function is represented, as well as the function for its benchmark."
    ]
   },
   {
