Fixed Space tests

--- a/examples/Interpolation.ipynb
+++ b/examples/Interpolation.ipynb
@@ -18,15 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from seemps.state import MPS #Create MPS\n",
-    "from seemps.analysis.space import Space #Create position space for problem definition\n",
-    "from seemps.analysis.interpolation import fourier_interpolation, finite_differences_interpolation #Interpolation"
+    "from seemps.state import MPS  # Create MPS\n",
+    "from seemps.analysis.space import Space  # Create position space for problem definition\n",
+    "from seemps.analysis.interpolation import (\n",
+    "    fourier_interpolation,\n",
+    "    finite_differences_interpolation,\n",
+    ")  # Interpolation"
    ]
   },
   {
@@ -42,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gaussian(x):\n",
-    "    \"\"\" Constructs a normalized Gaussian with mean zero and standard\n",
+    "    \"\"\"Constructs a normalized Gaussian with mean zero and standard\n",
     "        deviation one defined on x.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    x: np.ndarray\n",
@@ -59,7 +62,7 @@
     "    -------\n",
     "    np.ndarray: Gaussian defined on x.\n",
     "    \"\"\"\n",
-    "    f = np.exp(-x**2/2)\n",
+    "    f = np.exp(-(x**2) / 2)\n",
     "    return f"
    ]
   },
@@ -79,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_phase(v):\n",
     "    \"\"\"\n",
-    "    Removes the phase from a complex vector `v` by normalizing it with the phase \n",
+    "    Removes the phase from a complex vector `v` by normalizing it with the phase\n",
     "    of its maximum magnitude element.\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    v : numpy.ndarray\n",
@@ -97,12 +100,12 @@
     "    -------\n",
     "    numpy.ndarray\n",
     "        A complex vector of the same shape as `v` with its phase removed.\n",
-    "    \n",
+    "\n",
     "    Notes\n",
     "    -----\n",
-    "    The phase of the vector is adjusted by multiplying it by the conjugate of \n",
-    "    the element with the maximum magnitude, normalized by the absolute value of \n",
-    "    that element. This operation effectively rotates the vector to align its \n",
+    "    The phase of the vector is adjusted by multiplying it by the conjugate of\n",
+    "    the element with the maximum magnitude, normalized by the absolute value of\n",
+    "    that element. This operation effectively rotates the vector to align its\n",
     "    largest element with the positive real axis.\n",
     "    \"\"\"\n",
     "    shape = v.shape\n",
@@ -110,9 +113,10 @@
     "    k = np.argmax(np.abs(v))\n",
     "    return (v * np.abs(v[k]) / v[k]).reshape(shape)\n",
     "\n",
+    "\n",
     "def norm2_difference(a, b):\n",
     "    \"\"\"\n",
-    "    Calculates the norm-2 difference between two vectors or MPS objects after \n",
+    "    Calculates the norm-2 difference between two vectors or MPS objects after\n",
     "    removing their phases and normalizing them.\n",
     "\n",
     "    Parameters\n",
@@ -125,14 +129,14 @@
     "    Returns\n",
     "    -------\n",
     "    float\n",
-    "        The norm-2 (Euclidean) difference between the two vectors after phase \n",
+    "        The norm-2 (Euclidean) difference between the two vectors after phase\n",
     "        removal and normalization.\n",
     "\n",
     "    Notes\n",
     "    -----\n",
-    "    If `a` or `b` are instances of the `MPS` class, they are first converted to \n",
-    "    vector form using the `to_vector()` method. The vectors are then phase-aligned \n",
-    "    using the `remove_phase` function and normalized to unit length. The difference \n",
+    "    If `a` or `b` are instances of the `MPS` class, they are first converted to\n",
+    "    vector form using the `to_vector()` method. The vectors are then phase-aligned\n",
+    "    using the `remove_phase` function and normalized to unit length. The difference\n",
     "    is calculated using the Euclidean norm of the difference vector.\n",
     "    \"\"\"\n",
     "    if isinstance(a, MPS):\n",
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +167,11 @@
     "n = 3\n",
     "N = 2**n\n",
     "qubits_per_dimension = [n]\n",
-    "L = np.sqrt(2*np.pi*2**n)\n",
-    "space = Space(qubits_per_dimension, L=[[-L/2,L/2]], closed=False)\n",
+    "L = np.sqrt(2 * np.pi * 2**n)\n",
+    "space = Space(qubits_per_dimension, L=[[-L / 2, L / 2]], closed=False)\n",
     "x_n = space.x[0]\n",
     "f_n = gaussian(x_n)\n",
-    "f_n_mps = MPS.from_vector(f_n, [2]*n, normalize=False)"
+    "f_n_mps = MPS.from_vector(f_n, [2] * n, normalize=False)"
    ]
   },
   {
@@ -179,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define m-qubit function on the interpolated grid\n",
-    "m = n+1\n",
+    "m = n + 1\n",
     "M = 2**m\n",
-    "new_space = space.increase_resolution([m])\n",
+    "new_space = space.change_qubits([m])\n",
     "x_m = new_space.x[0]\n",
     "f_m = gaussian(x_m)"
    ]
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,12 +229,14 @@
     }
    ],
    "source": [
-    "print(f'Norm-2 difference. Fourier = {norm2_difference(f_m, f_fourier)}, finite differences = {norm2_difference(f_m, f_fd)}')"
+    "print(\n",
+    "    f\"Norm-2 difference. Fourier = {norm2_difference(f_m, f_fourier)}, finite differences = {norm2_difference(f_m, f_fd)}\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +263,12 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.set_xlabel('x')\n",
-    "ax.set_ylabel('f(x)')\n",
-    "ax.plot(x_n, f_n, linestyle='solid', label='n-qubit function')\n",
-    "ax.plot(x_m, f_m, linestyle='dotted', label='m-qubit function')\n",
-    "ax.plot(x_m, f_fourier.real, linestyle='dashed', label='Fourier m-qubit function')\n",
-    "ax.plot(x_m, f_fd, linestyle='dashdot', label='Finite differences m-qubit function')\n",
+    "ax.set_xlabel(\"x\")\n",
+    "ax.set_ylabel(\"f(x)\")\n",
+    "ax.plot(x_n, f_n, linestyle=\"solid\", label=\"n-qubit function\")\n",
+    "ax.plot(x_m, f_m, linestyle=\"dotted\", label=\"m-qubit function\")\n",
+    "ax.plot(x_m, f_fourier.real, linestyle=\"dashed\", label=\"Fourier m-qubit function\")\n",
+    "ax.plot(x_m, f_fd, linestyle=\"dashdot\", label=\"Finite differences m-qubit function\")\n",
     "\n",
     "ax.legend()"
    ]
@@ -283,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 3\n",
     "qubits_per_dimension = [n]\n",
-    "L = np.sqrt(2*np.pi*2**n)\n",
-    "space = Space(qubits_per_dimension, L=[[-L/2,L/2]], closed=False)\n",
+    "L = np.sqrt(2 * np.pi * 2**n)\n",
+    "space = Space(qubits_per_dimension, L=[(-L / 2, L / 2)], closed=False)\n",
     "m = 12\n",
     "M = 2**m\n",
-    "new_space = space.increase_resolution([m])\n",
+    "new_space = space.change_qubits([m])\n",
     "x_m = new_space.x[0]\n",
     "f_m = gaussian(x_m)\n",
     "f_m /= np.linalg.norm(f_m)"
@@ -301,32 +307,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "f_fds = []\n",
     "f_fouriers = []\n",
-    "n_qubits = range(3,m)\n",
+    "n_qubits = range(3, m)\n",
     "for n in n_qubits:\n",
     "    N = 2**n\n",
-    "    space = space.increase_resolution([n])\n",
+    "    space = space.change_qubits([n])\n",
     "    x_n = space.x[0]\n",
     "    f_n = gaussian(x_n)\n",
-    "    f_n_mps = MPS.from_vector(f_n, [2]*n, normalize=False)\n",
+    "    f_n_mps = MPS.from_vector(f_n, [2] * n, normalize=False)\n",
     "    f_fourier_mps = fourier_interpolation(f_n_mps, space, [n], [m])\n",
     "    f_fd_mps = f_n_mps.copy()\n",
-    "    for n_i in range(n,m):\n",
-    "        f_fd_mps = finite_differences_interpolation(f_fd_mps, space.increase_resolution([n_i]))\n",
+    "    for n_i in range(n, m):\n",
+    "        f_fd_mps = finite_differences_interpolation(\n",
+    "            f_fd_mps, space.change_qubits([n_i])\n",
+    "        )\n",
     "    f_fourier = f_fourier_mps.to_vector()\n",
     "    f_fd = f_fd_mps.to_vector()\n",
-    "    f_fds.append(f_fd/np.linalg.norm(f_fd))\n",
-    "    f_fouriers.append(f_fourier/np.linalg.norm(f_fourier))"
+    "    f_fds.append(f_fd / np.linalg.norm(f_fd))\n",
+    "    f_fouriers.append(f_fourier / np.linalg.norm(f_fourier))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -351,23 +359,33 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(1,3,figsize=(6.4*1.2*3,4.8*1.2))\n",
-    "ax[0].set_title('Fourier interpolation')\n",
-    "ax[0].set_xlabel('x')\n",
-    "ax[0].set_ylabel('f(x)')\n",
-    "ax[1].set_title('Finite differences interpolation')\n",
-    "ax[1].set_xlabel('x')\n",
-    "ax[1].set_ylabel('f(x)')\n",
-    "ax[2].set_xlabel('n')\n",
-    "ax[2].set_ylabel('Norm-2 error')\n",
-    "ax[0].plot(x_m, f_m, color='k', linestyle='solid', label=f'{m}-qubit function')\n",
-    "ax[1].plot(x_m, f_m, color='k', linestyle='solid', label=f'{m}-qubit function')\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(6.4 * 1.2 * 3, 4.8 * 1.2))\n",
+    "ax[0].set_title(\"Fourier interpolation\")\n",
+    "ax[0].set_xlabel(\"x\")\n",
+    "ax[0].set_ylabel(\"f(x)\")\n",
+    "ax[1].set_title(\"Finite differences interpolation\")\n",
+    "ax[1].set_xlabel(\"x\")\n",
+    "ax[1].set_ylabel(\"f(x)\")\n",
+    "ax[2].set_xlabel(\"n\")\n",
+    "ax[2].set_ylabel(\"Norm-2 error\")\n",
+    "ax[0].plot(x_m, f_m, color=\"k\", linestyle=\"solid\", label=f\"{m}-qubit function\")\n",
+    "ax[1].plot(x_m, f_m, color=\"k\", linestyle=\"solid\", label=f\"{m}-qubit function\")\n",
     "for i, n in enumerate(n_qubits):\n",
-    "    ax[0].plot(x_m, f_fouriers[i].real, linestyle='dashed', label=f'{n}-qubit function')\n",
-    "    ax[1].plot(x_m, f_fds[i].real, linestyle='dashdot', label=f'{n}-qubit function')\n",
-    "ax[2].plot(n_qubits, [norm2_difference(f_m,f_fouriers[i].real) for i, n in enumerate(n_qubits)], linestyle='dashed', label=f'Fourier')\n",
-    "ax[2].plot(n_qubits, [norm2_difference(f_m,f_fds[i].real) for i, n in enumerate(n_qubits)], linestyle='dashdot', label=f'Finite differences')\n",
-    "ax[2].set_yscale('log')\n",
+    "    ax[0].plot(x_m, f_fouriers[i].real, linestyle=\"dashed\", label=f\"{n}-qubit function\")\n",
+    "    ax[1].plot(x_m, f_fds[i].real, linestyle=\"dashdot\", label=f\"{n}-qubit function\")\n",
+    "ax[2].plot(\n",
+    "    n_qubits,\n",
+    "    [norm2_difference(f_m, f_fouriers[i].real) for i, n in enumerate(n_qubits)],\n",
+    "    linestyle=\"dashed\",\n",
+    "    label=\"Fourier\",\n",
+    ")\n",
+    "ax[2].plot(\n",
+    "    n_qubits,\n",
+    "    [norm2_difference(f_m, f_fds[i].real) for i, n in enumerate(n_qubits)],\n",
+    "    linestyle=\"dashdot\",\n",
+    "    label=\"Finite differences\",\n",
+    ")\n",
+    "ax[2].set_yscale(\"log\")\n",
     "ax[0].legend()\n",
     "ax[2].legend()"
    ]
