Space uses Mesh now

--- a/examples/Interpolation.ipynb
+++ b/examples/Interpolation.ipynb
@@ -168,7 +168,7 @@
     "N = 2**n\n",
     "qubits_per_dimension = [n]\n",
     "L = np.sqrt(2 * np.pi * 2**n)\n",
-    "space = Space(qubits_per_dimension, L=[[-L / 2, L / 2]], closed=False)\n",
+    "space = Space(qubits_per_dimension, L=[(-L / 2, L / 2)], closed=False)\n",
     "x_n = space.x[0]\n",
     "f_n = gaussian(x_n)\n",
     "f_n_mps = MPS.from_vector(f_n, [2] * n, normalize=False)"
@@ -375,13 +375,13 @@
     "    ax[1].plot(x_m, f_fds[i].real, linestyle=\"dashdot\", label=f\"{n}-qubit function\")\n",
     "ax[2].plot(\n",
     "    n_qubits,\n",
-    "    [norm2_difference(f_m, f_fouriers[i].real) for i, n in enumerate(n_qubits)],\n",
+    "    [norm2_difference(f_m, f_fouriers[i].real) for i, _ in enumerate(n_qubits)],\n",
     "    linestyle=\"dashed\",\n",
     "    label=\"Fourier\",\n",
     ")\n",
     "ax[2].plot(\n",
     "    n_qubits,\n",
-    "    [norm2_difference(f_m, f_fds[i].real) for i, n in enumerate(n_qubits)],\n",
+    "    [norm2_difference(f_m, f_fds[i].real) for i, _ in enumerate(n_qubits)],\n",
     "    linestyle=\"dashdot\",\n",
     "    label=\"Finite differences\",\n",
     ")\n",
