Avoid strict type checking in notebook

--- a/examples/Interpolation.ipynb
+++ b/examples/Interpolation.ipynb
@@ -22,8 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pyright: standard\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt  # pyright: ignore[reportMissingModuleSource]\n",
     "from seemps.state import MPS  # Create MPS\n",
     "from seemps.analysis.space import Space  # Create position space for problem definition\n",
     "from seemps.analysis.interpolation import (\n",
