Further silencing PyRight

--- a/examples/Interpolation.ipynb
+++ b/examples/Interpolation.ipynb
@@ -268,7 +268,7 @@
     "ax.set_ylabel(\"f(x)\")\n",
     "ax.plot(x_n, f_n, linestyle=\"solid\", label=\"n-qubit function\")\n",
     "ax.plot(x_m, f_m, linestyle=\"dotted\", label=\"m-qubit function\")\n",
-    "ax.plot(x_m, f_fourier.real, linestyle=\"dashed\", label=\"Fourier m-qubit function\")\n",
+    "ax.plot(x_m, f_fourier.real, linestyle=\"dashed\", label=\"Fourier m-qubit function\")  # type: ignore\n",
     "ax.plot(x_m, f_fd, linestyle=\"dashdot\", label=\"Finite differences m-qubit function\")\n",
     "\n",
     "ax.legend()"
