Added pre-commit hooks. Removed finite_differences_mpo()

--- a/examples/PDE.ipynb
+++ b/examples/PDE.ipynb
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seemps.analysis.finite_differences import finite_differences_mpo\n",
+    "from seemps.analysis.finite_differences import smooth_finite_differences_mpo\n",
     "from seemps.analysis.operators import x_to_n_mpo\n",
     "from seemps.operators import MPOSum\n",
     "from seemps.state import DEFAULT_STRATEGY, Strategy, product_state\n",
@@ -87,8 +87,8 @@
     "            n=2,\n",
     "        )\n",
     "    )\n",
-    "    derivative = (-0.5 / m) * finite_differences_mpo(\n",
-    "        n, dx, closed=closed, strategy=operator_strategy\n",
+    "    derivative = (-0.5 / m) * smooth_finite_differences_mpo(\n",
+    "        n, dx, order=2, closed=closed, strategy=operator_strategy\n",
     "    )\n",
     "\n",
     "    return x, MPOSum([potential, derivative]).join(strategy=operator_strategy)"
