--- a/examples/Integration.ipynb
+++ b/examples/Integration.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook shows how to integrate functions loaded in MPS by contracting them with predefined quadrature MPS. These quadrature MPS can be straightforwardly generalized to multivariate scenarios by means of tensor products in both qubit orders, either serial or interleaved. Moreover, this integration procedure avoids the *curse of dimensionality*, as it has a cost that scales polynomially with the dimension of the function instead than exponentially.\n",
     "\n",
-    "The main prerequisite for this *quantum-inspired* integration method is to dispose of a prior multivariate function loaded in MPS. This can be done following several methods, such as MPS Chebyshev expansions (see the `chebyshev_composition.ipynb` example), tensor cross-interpolation (TCI, see the `tt-cross.ipynb` example), multiscale interpolative constructions, etc.\n",
+    "The main prerequisite for this *quantum-inspired* integration method is to dispose of a prior multivariate function loaded in MPS. This can be done following several methods, such as MPS orthogonal-polynomial expansions (see the `chebyshev_composition.ipynb` example), tensor cross-interpolation (TCI, see the `tt-cross.ipynb` example), multiscale interpolative constructions, solutions to partial differential equations, etc.\n",
     "\n",
     "For this example, we are going to load a trivially simple multivariate function \n",
     "\n",
@@ -24,23 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Cross sweep   1 with error(1000 samples in norm-inf)=3.2845046914370504, maxbond=2, evals(cumulative)=228\n",
-      " Cross sweep   1 with error(1000 samples in norm-inf)=2.842170943040401e-14, maxbond=3, evals(cumulative)=816\n",
-      " State converged within tolerance 1e-12\n"
+      " Iteration (half-sweep):   1/200, error: 5.594086918403899e+00/1.00e-08, maxbond:   2/1000, time: 0.020175/None, evals:     1252/None.\n",
+      " Iteration (half-sweep):   2/200, error: 3.996802888650564e-14/1.00e-08, maxbond:   3/1000, time: 0.044907/None, evals:     1840/None.\n",
+      "State converged within tolerance 1e-08\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from seemps.analysis.mesh import ChebyshevInterval, Mesh\n",
+    "from seemps.analysis.mesh import ChebyshevInterval, Mesh, mps_to_mesh_matrix\n",
     "from seemps.analysis.cross import BlackBoxLoadMPS, cross_dmrg\n",
     "import seemps.tools\n",
     "\n",
@@ -56,7 +56,9 @@
     "mesh = Mesh([interval] * dimension)\n",
     "\n",
     "func = lambda tensor: np.sum(tensor**3, axis=0)  # x^3 * y^3 * ...\n",
-    "black_box = BlackBoxLoadMPS(func, mesh)\n",
+    "map_matrix = mps_to_mesh_matrix([num_qubits] * dimension)\n",
+    "physical_dimensions = [2] * num_qubits * dimension\n",
+    "black_box = BlackBoxLoadMPS(func, mesh, map_matrix, physical_dimensions)\n",
     "\n",
     "mps_func = cross_dmrg(black_box).mps"
    ]
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integration error:  4.195754854663392e-12\n"
+      "Integration error:  9.237055564881302e-13\n"
      ]
     }
    ],
@@ -107,6 +109,59 @@
     "integral_exact = 0\n",
     "integral_mps = scprod(mps_func, mps_quad_10d)\n",
     "\n",
+    "print(\"Integration error: \", np.max(np.abs(integral_exact - integral_mps)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More complicated quadrature rules, such as those arising from non-implemented quadrature rules or non-binary MPS structures, can be loaded in MPS form using the function `quadrature_mesh_to_mps`, which employs tensor cross-interpolation to load it in MPS. In practice, TCI proves to be accurate and robust for encoding these types of MPS in most situations.\n",
+    "\n",
+    "For example, let us integrate the same function but this time encoded as an MPS using a ternary base. Now, we consider 2 qutrits instead of 3 for each dimension, such that it has $3^2 = 9$ nodes instead of the previous $2^3 = 8$. This example illustrates the generality of TCI and MPS-based integration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Iteration (half-sweep):   1/200, error: 7.524997929584437e+00/1.00e-08, maxbond:   3/1000, time: 0.018782/None, evals:     1438/None.\n",
+      " Iteration (half-sweep):   2/200, error: 2.042810365310288e-14/1.00e-08, maxbond:   4/1000, time: 0.034548/None, evals:     2707/None.\n",
+      "State converged within tolerance 1e-08\n",
+      "[3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]\n",
+      " Iteration (half-sweep):   2/200, error: 2.190149598566998e-08/1.00e-08, maxbond:   3/1000, time: 0.018145/None, evals:     1480/None.\n",
+      " Iteration (half-sweep):   4/200, error: 1.694065894508601e-20/1.00e-08, maxbond:   5/1000, time: 0.032972/None, evals:     3205/None.\n",
+      "State converged within tolerance 1e-08\n",
+      "[3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]\n",
+      "Integration error:  1.6862067298006878e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seemps.analysis.integration import mesh_to_quadrature_mesh, quadrature_mesh_to_mps\n",
+    "\n",
+    "num_qutrits = 2\n",
+    "interval = ChebyshevInterval(start, stop, 3**num_qutrits)\n",
+    "mesh = Mesh([interval] * dimension)\n",
+    "\n",
+    "map_matrix = mps_to_mesh_matrix([num_qutrits] * dimension, base=3)\n",
+    "physical_dimensions = [3] * num_qutrits * dimension\n",
+    "black_box = BlackBoxLoadMPS(func, mesh, map_matrix, physical_dimensions)\n",
+    "\n",
+    "mps_func_3 = cross_dmrg(black_box).mps\n",
+    "print(mps_func_3.physical_dimensions())\n",
+    "\n",
+    "quad_mesh = mesh_to_quadrature_mesh(mesh)\n",
+    "mps_quad_3 = quadrature_mesh_to_mps(quad_mesh, map_matrix, physical_dimensions)\n",
+    "print(mps_quad_3.physical_dimensions())\n",
+    "\n",
+    "integral_exact = 0\n",
+    "integral_mps = scprod(mps_func_3, mps_quad_3)\n",
     "print(\"Integration error: \", np.max(np.abs(integral_exact - integral_mps)))"
    ]
   }
@@ -127,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
