Add ComputationTree tutorial

--- a/examples/Chebyshev.ipynb
+++ b/examples/Chebyshev.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Approximating and composing functions with orthogonal polynomial expansions\n",
+    "## MPS function approximation with polynomial expansions\n",
     "\n",
     "This notebook shows how to compose univariate functions with generic matrix product states using expansions of MPS in basis of orthogonal polynomials. In particular, we employ Chebyshev approximations. This algorithm can be used to load smooth univariate functions, as well as multivariate functions whose algebraic structure is given by univariate function composition. The main idea is that a Chebyshev expansion\n",
     "$$\n",
