--- a/examples/Chebyshev.ipynb
+++ b/examples/Chebyshev.ipynb
@@ -30,9 +30,7 @@
     "\n",
     "from seemps.analysis.mesh import RegularInterval\n",
     "from seemps.analysis.factories import mps_interval\n",
-    "from seemps.analysis.expansion import (\n",
-    "    ChebyshevExpansion, mps_polynomial_expansion\n",
-    ")"
+    "from seemps.analysis.expansion import ChebyshevExpansion"
    ]
   },
   {
@@ -89,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, compose the function with the initial MPS using the `mps_polynomial_expansion` function. By default, it uses the Clenshaw summation method. The cost of the algorithm depends on the bond dimension of the intermediate steps, which can be parameterized with the simplification strategy provided. For this example, we use the default `DEFAULT_STRATEGY`, which has an error of the order of $10^{-8}$."
+    "Finally, compose the function with the initial MPS using the `to_mps` function. By default, it uses the Clenshaw summation method. The cost of the algorithm depends on the bond dimension of the intermediate steps, which can be parameterized with the simplification strategy provided. For this example, we use the default `DEFAULT_STRATEGY`, which has an error of the order of $10^{-8}$."
    ]
   },
   {
@@ -99,7 +97,7 @@
    "outputs": [],
    "source": [
     "expansion = ChebyshevExpansion(coeffs_interp, (start, stop))\n",
-    "mps_gaussian = mps_polynomial_expansion(expansion, initial=mps_x)"
+    "mps_gaussian = expansion.to_mps(mps_x)"
    ]
   },
   {
@@ -207,9 +205,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expansion = ChebyshevExpansion(coeffs, domain=(0,2))\n",
-    "mps_gaussian_2d_A = mps_polynomial_expansion(expansion, mps_domain_A)\n",
-    "mps_gaussian_2d_B = mps_polynomial_expansion(expansion, mps_domain_B)"
+    "expansion = ChebyshevExpansion(coeffs, domain=(0, 2))\n",
+    "mps_gaussian_2d_A = expansion.to_mps(mps_domain_A)\n",
+    "mps_gaussian_2d_B = expansion.to_mps(mps_domain_B)"
    ]
   },
   {
