Moved simplify routines to state and operators modules

--- a/examples/TT-Cross.ipynb
+++ b/examples/TT-Cross.ipynb
@@ -20,9 +20,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from seemps.analysis.mesh import Mesh, RegularInterval, mps_to_mesh_matrix, interleaving_permutation\n",
+    "from seemps.analysis.mesh import (\n",
+    "    Mesh,\n",
+    "    RegularInterval,\n",
+    "    mps_to_mesh_matrix,\n",
+    "    interleaving_permutation,\n",
+    ")\n",
     "from seemps.analysis.factories import mps_interval\n",
-    "from seemps.analysis.cross import cross_interpolation, CrossStrategyDMRG, CrossStrategyMaxvol\n",
+    "from seemps.analysis.cross import (\n",
+    "    cross_interpolation,\n",
+    "    CrossStrategyDMRG,\n",
+    "    CrossStrategyMaxvol,\n",
+    ")\n",
     "import seemps.tools\n",
     "\n",
     "seemps.tools.DEBUG = 2"
@@ -55,11 +64,11 @@
    "source": [
     "from seemps.analysis.cross import BlackBoxLoadMPS\n",
     "\n",
-    "func = lambda tensor: np.exp(-np.sum(tensor**2, axis=0)) # noqa: E731\n",
+    "func = lambda tensor: np.exp(-np.sum(tensor**2, axis=0))  # noqa: E731\n",
     "\n",
     "start, stop = -1, 1\n",
     "num_qubits = 7\n",
-    "num_points = 2 ** num_qubits\n",
+    "num_points = 2**num_qubits\n",
     "interval = RegularInterval(start, stop, 2**num_qubits)\n",
     "dimension = 2\n",
     "mesh = Mesh([interval] * dimension)\n",
@@ -119,14 +128,16 @@
     "\n",
     "\n",
     "permutation = interleaving_permutation([num_qubits] * dimension)\n",
-    "sites_per_dimension = [num_qubits] * dimension \n",
+    "sites_per_dimension = [num_qubits] * dimension\n",
     "map_matrix = mps_to_mesh_matrix(sites_per_dimension, permutation)\n",
     "black_box = BlackBoxLoadMPS(func, mesh, map_matrix, physical_dimensions)\n",
     "cross_strategy = CrossStrategyMaxvol()\n",
     "mps = cross_interpolation(black_box, cross_strategy).mps\n",
     "\n",
     "Z_mps_interleaved = mps.to_vector().reshape(physical_dimensions)\n",
-    "Z_mps = reorder_tensor(Z_mps_interleaved, sites_per_dimension).reshape([num_points, num_points])\n",
+    "Z_mps = reorder_tensor(Z_mps_interleaved, sites_per_dimension).reshape(\n",
+    "    [num_points, num_points]\n",
+    ")\n",
     "\n",
     "max_error = np.max(np.abs(Z_mps - Z_vec))\n",
     "print(f\"Max. error: {max_error}\")"
@@ -183,9 +194,9 @@
    "outputs": [],
    "source": [
     "from seemps.analysis.cross import BlackBoxLoadMPO\n",
-    "from seemps.truncate.simplify_mpo import mps_as_mpo\n",
+    "from seemps.operators import mps_as_mpo\n",
     "\n",
-    "func = lambda x, y: np.exp(-(x**2 + y**2)) # noqa: E731\n",
+    "func = lambda x, y: np.exp(-(x**2 + y**2))  # noqa: E731\n",
     "\n",
     "start, stop = -1, 1\n",
     "num_qubits = 10\n",
@@ -237,10 +248,9 @@
    "source": [
     "from seemps.analysis.cross import BlackBoxComposeMPS\n",
     "\n",
-    "func = lambda mps: ( # noqa: E731\n",
-    "    mps[0] * np.sin(mps[1] * mps[2]) +\n",
-    "    mps[1] * np.cos(mps[0] * mps[2])\n",
-    ") \n",
+    "func = lambda mps: (  # noqa: E731\n",
+    "    mps[0] * np.sin(mps[1] * mps[2]) + mps[1] * np.cos(mps[0] * mps[2])\n",
+    ")\n",
     "\n",
     "start, stop, num_qubits = -1, 1, 10\n",
     "interval = RegularInterval(start, stop, 2**num_qubits)\n",
