mps_tensor_sum/product moved to seemps.state

--- a/examples/Chebyshev.ipynb
+++ b/examples/Chebyshev.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seemps.analysis.factories import mps_tensor_sum"
+    "from seemps.state import mps_tensor_sum"
    ]
   },
   {
