--- a/examples/Integration.ipynb
+++ b/examples/Integration.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "from seemps.analysis.integration import mps_clenshaw_curtis\n",
-    "from seemps.analysis.factories import mps_tensor_product\n",
+    "from seemps.state import mps_tensor_product\n",
     "\n",
     "mps_quad_1d = mps_clenshaw_curtis(start, stop, num_qubits)\n",
     "mps_quad_10d = mps_tensor_product([mps_quad_1d] * dimension)"
